fix: vertical centered chevron icons on Collapse components

--- a/src/style/SASS/components/_collapse.scss
+++ b/src/style/SASS/components/_collapse.scss
@@ -18,6 +18,7 @@
 		img {
 			width: 24px;
 			height: auto;
+			vertical-align: middle;
 
 			@include for-device(mobile) {
 				width: 16px;
